--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.25",
     "postcss-nested": "^6.0.1",
+    "prettier": "^3.0.3",
     "tailwindcss": "^3.3.2"
   }
 }
