--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^9.0.0",
     "postcss": "^8.4.25",
     "postcss-nested": "^6.0.1",
     "prettier": "^3.0.3",
