--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "eslint-config-prettier": "^9.0.0",
     "postcss": "^8.4.25",
     "postcss-nested": "^6.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
   }
 }
