--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.3.1",
     "eslint-plugin-sort": "^2.10.0",
     "fontsource-frijole": "^4.0.0",
+    "lodash": "^4.17.21",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
